src/ui/chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui
  namespace: default
  labels:
    app.kubernetes.io/component: service
    app.kubernetes.io/instance: ui
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: ui
    app.kubernetes.io/owner: glramgoods
    helm.sh/chart: ui-1.3.0
  annotations:
    alb.ingress.kubernetes.io/group.name: gleamgoods-ui
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:564956047797:certificate/e27fa43e-60e8-4b71-ae4e-95e7e7cd3b46
    alb.ingress.kubernetes.io/healthcheck-path: /actuator/health/liveness
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443},{"HTTP": 80}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/target-type: ip
    argocd.argoproj.io/tracking-id: ui:networking.k8s.io/Ingress:default/ui
    external-dns.alpha.kubernetes.io/hostname: gleamgoods.dercioanselmo.com
spec:
  ingressClassName: alb
  rules:
  - host: gleamgoods.dercioanselmo.com
    http:
      paths:
      - backend:
          service:
            name: ui
            port:
              number: 80
        path: /
        pathType: Prefix
